# igotu-gt120b

./: .git-blame-ignore-revs  Cargo.toml  README.md  cargo-run.sh  dagger-run.sh  dagger.json  justfile  test-all-replays.sh
.dagger/: pyproject.toml
.dagger/src/igotu_gt_120/: __init__.py  main.py
.gitea/workflows/: rust.yaml
.github/workflows/: rust.yml
doc/: 51-igotu2gpx.rules  DevelopmentPlans.md
doc/topics/dataformat-parsing/: data-structure.ods  data-structure.txt  data.rs  data2.rs  igotu-gt120b
helpers/: git-pre-commit-cargo-fmt  igotu-usb.lua
helpers/python/: difflib.py  difflib.py.patch  fuzzcompare.py  udiff.py
src/: comm.rs  comm_bulk.rs  commands.rs  gt120b_datadump.rs  gt120b_workflow.rs  intf.rs  intf_bulk.rs  intf_file.rs  main (copy 1).rs  main.rs  replay-120b.txt  replay-prepare.sh  workflow_120b.rs
tmp/: finding-formula.ods  offset-magic.txt
tmp/offset-calculation/: calc.rs  finding-formula.ods
