[package]
name = "igotu-gt120"
version = "0.1.0"
edition = "2024"

[dependencies]
nusb = "0.1.14"
#nusb = "0.2.0-beta"
futures-lite = "1.13.0"
env_logger = "0.10.0"
hex-literal = "1.0.0"
strum = "0.27.1"
strum_macros = "0.27.1"
hex = "0.4"
clap = { version = "4.5.40", features = ["derive"] }
chrono = "0.4.41"

#[[bin]]
#name = "main"

[[bin]]
name = "data2"
path = "doc/topics/dataformat-parsing/data2.rs"
[[bin]]
name = "data3"
path = "doc/topics/dataformat-parsing/data3.rs"
[[bin]]
name = "data3b"
path = "doc/topics/dataformat-parsing/data3b.rs"
