[package]
name = "igotu-gt120b"
version = "0.2.0"
authors = ["Daniel Alder"]
edition = "2024"

[dependencies]
nusb = "0.2.1"
futures-lite = "2.6.1"
env_logger = "0.11.8"
log = "0.4.28"
hex-literal = "1.0.0"
strum = "0.27.1"
strum_macros = "0.27.1"
hex = "0.4"
clap = { version = "4.5.40", features = ["derive"] }
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"

#[[bin]]
#name = "main"
